<resources>
    <string name="app_name">Library</string>
    <string name="activity_my_books_mb">My books</string>
    <string name="activity_profile_profile">Profile</string>
    <string name="activity_profile_statistics">Statistics</string>
    <string name="activity_profile_notifications">Notifications</string>
    <string name="activity_profile_publications">Publications</string>
    <string name="activity_profile_friends">Friends</string>

    <string-array name="titles">
        <item>Home</item>
        <item>My Books</item>
        <item>Profile</item>
        <item>Settings</item>
    </string-array>

    <string name="nav_home">Home</string>
    <string name="nav_my_books">My Books</string>
    <string name="nav_profile">Profile</string>
    <string name="nav_settings">Settings</string>
    <string name="title_activity_drawer_example">ActivityDrawerExample</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="activity_my_book_detail_bibliography">Bibliography</string>
    <string name="activity_my_book_detail_read_pages">Read Pages</string>
    <string name="activity_my_book_detail_percentage_read">Percentage Read</string>
    <string name="activity_my_book_detail_start_date">Start date</string>
    <string name="activity_my_book_detail_actual_reading">Actual Reading</string>

    <string name="fragment_publications_hint">What do you think?</string>
    <string name="fragment_publications_publish">Publish</string>

    <string name="facebook_app_id">223297168208291</string>
    <string name="fb_login_protocol_scheme">fb223297168208291</string>

    <string name="activity_login_hint_username">E-mail o teléfono</string>
    <string name="activity_login_hint_password">Contraseña</string>
    <string name="activity_login_button_login">Iniciar sesión con Facebook</string>

    <string name="activity_home_category_computing">Computing</string>
    <string name="activity_home_category_math">Math</string>
    <string name="activity_home_category_philosophy">Philosophy</string>

    <string name="activity_book_detail_basic_info_title">Title</string>
    <string name="activity_book_detail_basic_info_author">Author</string>
    <string name="activity_book_detail_reviews_text">Reviews</string>
    <string name="activity_book_detail_bibliografhy_text">Bibliografhy</string>

    <string name="activity_settings_privacy">Privacy</string>
    <string name="activity_settings_show_profile">Show Profile</string>
    <string name="activity_settings_show_statistics">Show Statistics</string>
    <string name="activity_settings_show_notifications">Show Notifications</string>
    <string name="menu_search_books">Search books</string>

    <string name="type_month">month</string>
    <string name="type_reading">reading</string>;
    <string name="type_total">total</string>
</resources>
