<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:icon="@drawable/ic_home_black_24dp"
            android:id="@+id/nav_search"
            android:title="@string/nav_home"/>
        <item
            android:icon="@drawable/ic_book_black_24dp"
            android:id="@+id/nav_my_books"
            android:title="@string/nav_my_books"/>
    </group>
    <item android:title="More">
        <menu>
            <item android:id="@+id/nav_profile"
                android:icon="@drawable/ic_account_circle_black_24dp"
                android:title="@string/nav_profile"/>
            <item android:id="@+id/nav_settings"
                android:icon="@drawable/ic_settings_black_24dp"
                android:title="@string/nav_settings"/>
        </menu>
    </item>
</menu>